[build-system]
requires = [
    "hatchling",
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]
build-backend = "hatchling.build"

[project]
name = "opencue_proto"
version = "1.13.8"
# dynamic = ["version"]  # Commented out for deployment without git
dependencies = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]
requires-python = ">3.7"
description = "The opencue-proto is a module containing the protobuf modules for communication to and from Cuebot."
readme = "README.md"
license = {text = "Apache-2.0"}

# [tool.hatch.version]  # Commented out for deployment without git
# source = "code"
# path = "../ci/generate_version_number.py"
# default-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["opencue_proto"]

[tool.hatch.build.hooks.custom]
path = "build_hooks.py"
